# ai-invention-ace67e-the-walk-resolution-limit-a-super-resolu

./: README.md
dataset_iter1_spectrally_anno/demo/: data_code_demo.ipynb  mini_demo_data.json
dataset_iter1_spectrally_anno/src/: data.py  preview_data_out.json  pyproject.toml  requirements.txt
evaluation_iter3_confound_decomp/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_confound_decomp/src/: eval.py  mini_eval_out.json  preview_eval_out.json  pyproject.toml  requirements.txt
evaluation_iter4_cross_architect/demo/: eval_code_demo.ipynb
evaluation_iter4_cross_architect/src/: eval.py  mini_eval_out.json  mini_method_out.json  preview_eval_out.json  preview_method_out.json  pyproject.toml  requirements.txt
evaluation_iter6_deep_dive_cross/demo/: eval_code_demo.ipynb
evaluation_iter6_deep_dive_cross/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_grand_synthesis/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_grand_synthesis/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
experiment_iter2_spectral_diagno/demo/: method_code_demo.ipynb  mini_demo_data.json
experiment_iter4_sri_predicts_rw/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  requirements.txt
experiment_iter5_sri_guided_adap/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
paper/: paper.tex
paper_latex/: references.bib
paper_latex/figures/: gen_fig3.py  (+5 more)
(+106 files in other folders)
