[project]
name = "sri-predicts-encoding-gap"
version = "0.1.0"
description = "SRI Predicts RWSE-vs-LapPE Quality on Fixed-Size (n=30) Synthetic Graphs"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "loguru>=0.7",
]
